--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
       "pre-commit": "npm run prettier-format && npm run lint"
     }
   },
+  "lint-staged": {
+    "*.ts": "prettier-format"
+  },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
@@ -28,6 +31,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "nodemon": "^3.0.2",
     "onchange": "^7.1.0",
     "prettier": "^3.1.1",
